--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/karmadude/trendo",
   "devDependencies": {
     "vows": "^0.8.1"
+  },
+  "dependencies": {
+    "moment": "^2.9.0"
   }
 }
